--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="./assets/scripts/index.js"></script>
     <title>Document</title>
 </head>
@@ -15,8 +16,8 @@
     <header class="header">
         <nav>
             <ul class="links links-left">
-                <li><a href="../README.md" class="about">About</a></li>
-                <li><a href="../README.md" class="store">About</a></li>
+                <li><a href="" class="about">About</a></li>
+                <li><a href="" class="store">Store</a></li>
             </ul>
             <ul class="links links-right">
                 <li><a href="" class="right">Gmail</a></li>
@@ -28,7 +29,7 @@
     </header>
     <main class="main">
         <h1><img src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="google logo"></h1>
-        <div class="search-bar"><img><img></div>
+        <div class="search-bar"><i class="fa fa-search"></i><input type="text"><i class="fa fa-microphone"></i></div>
         <div class="buttons">
             <button class="btn" id="btn-search">Google Search</button>
         <button class="btn" id="btn-random">I'm Feeling lucky</button>
