Add first version of display data

--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="./assets/scripts/index.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header id="header">
         <nav>
             <ul class="links links-left">
                 <li><a href="" class="about">About</a></li>
@@ -31,8 +30,8 @@
         <h1><img src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="google logo"></h1>
         <div class="search-bar"><i class="fa fa-search"></i><input type="text"><i class="fa fa-microphone"></i></div>
         <div class="buttons">
-            <button class="btn" id="btn-search">Google Search</button>
-        <button class="btn" id="btn-random">I'm Feeling lucky</button>
+            <button class="btn button-search" id="btn-search">Google Search</button>
+            <button class="btn" id="btn-random">I'm Feeling lucky</button>
         </div>
     </main>
     <footer>
@@ -52,5 +51,6 @@
             </ul>
         </nav>
     </footer>
+    <script src="./assets/scripts/index.js"></script>
 </body>
 </html>
