--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
     </header>
     <main class="main">
         <h1><img src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_light_color_272x92dp.png" alt="google logo"></h1>
-        <div class="search-bar"><i class="fa fa-search"></i><input type="text"><i class="fa fa-microphone"></i></div>
+        <form class="search-bar"><i class="fa fa-search" id="search-icon"></i><input type="text" name="search" id="search-string"><i class="fa fa-microphone"></i></form>
         <div class="buttons">
             <button class="btn button-search" id="btn-search">Google Search</button>
             <button class="btn" id="btn-random">I'm Feeling lucky</button>
